fix: добавить overflow-x: hidden для html{} на всякий случай

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -40,7 +40,7 @@ footer img {
 
 .footer__container {
     position:relative;
-    z-index: 1;
+    z-index: 2;
     padding: 30px 100px;
     margin: 0 auto;
     max-width: 100%;
